--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 2004-04-11  Jon Phillip <jon@rejon.org>
 
 	* Makefile.mingw share/Makefile.am src/Makefile.am 
-	  share/markers/Makefile.am share/markers/.cvsignore: Added the proper 
-      infrastructure to get files to the right location for markers.
+	  share/markers/Makefile.am share/markers/.cvsignore config.h.mingw: 
+      Added the proper infrastructure to get files to the right location for 
+      markers.
 
 	* share/tutorials/tipsandtricks.svg: Deleted the URL trick because it no 
       longer works or something.
