Added Makefile directive.
(bzr r2220)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2004-04-11  Jon Phillip <jon@rejon.org>
 
 	* Makefile.mingw share/Makefile.am src/Makefile.am 
-	  share/markers/Makefile.am share/markers/.cvsignore config.h.mingw: 
+	  share/markers/Makefile.am share/markers/.cvsignore config.h.mingw 
+	  configure.in: 
       Added the proper infrastructure to get files to the right location for 
       markers.
 
