fixed capitalization of "libpng" to avoid confusion.
(bzr r2250)

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
 	* src/helper/unit-menu.cpp: applied patch 934358 from cth103 to fix
 	  grid unit changing bug.  Turns out this wasn't the correct fix, so
 	  I fixed that instead.
+	* configure.in: fixed capitalization of "libpng" to avoid confusion.
 
 2004-04-13  Ted Gould <ted@gould.cx>
 
