--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,14 @@
 	  grid unit changing bug.  Turns out this wasn't the correct fix, so
 	  I fixed that instead.
 	* configure.in: fixed capitalization of "libpng" to avoid confusion.
+	* src/sp-namedview.cpp, src/document.cpp, src/document.h, src/file.cpp,
+	  src/file.h, src/document-undo.cpp, src/interface.cpp, src/verbs.cpp,
+	  src/verbs.h:
+	  Newly opened files will only create new windows if the current document
+	  is untouched.  (RFE#928517)
+	  Added support for future "File/Revert" handling.  Needs
+	  a little more support in the SPDocument structure.  See notes in
+      "src/file.cpp", function "sp_file_revert_dialog".
 
 2004-04-13  Ted Gould <ted@gould.cx>
 
