--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* most files in src/: removed many old "compatable" struct typedefs
 
+	* src/libarikkei/arikkei-dict.cpp, src/libarikkei/arikkei-dict.h:
+	  removed unused arikkei files
+
 	* configure.in: added gtkmm dependency
 
 2004-04-14  Kees Cook <kees@outflux.net>
