--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-15  Carl Hetherington <inkscape@carlh.net>
+
+	* src/desktop.cpp
+	Small fix for the problem whereby the first file loaded in an
+	Inkscape session will not have its grid set up properly.  This was
+	my patch #935013.
+
 2004-04-14  Ted Gould <ted@gould.cx>
 
 	* src/file.cpp, dialogs/filedialog.cpp:
