--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-04-15  Carl Hetherington <inkscape@carlh.net>
 
+	* src/seltrans.cpp, src/helper/sodipodi-ctrlrect.cpp,
+	src/helper/sodipodi-ctrlrect.h
+	  Use black, dashed bounding boxes for indicating itemselection,
+	  rather than red, solid boxes (as suggested by Bulia).
+
+2004-04-15  Carl Hetherington <inkscape@carlh.net>
+
 	* src/desktop.cpp
 	Small fix for the problem whereby the first file loaded in an
 	Inkscape session will not have its grid set up properly.  This was
