--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-04-15  Carl Hetherington <inkscape@carlh.net>
+
+	* src/make.exclude, src/make.dep, src/make.files, src/make.ofiles:
+	Various fixes to the Win32 build following rearrangement of some
+	source files and cleanups to libnr.
+
+	* src/sp-text.cpp: remove an unused variable.
+
+	* src/display/sodipodi-ctrlrect.cpp: removed two unused variables.
+
 2004-04-16  MenTaLguY <mental@rydia.net>
 
     * src/selection.cpp, src/selection.h, src/forward.h: initial
