--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-18  MenTaLguY <mental@rydia.net>
+
+	* src/selection.cpp, src/selection.h, src/selection-chemistry.cpp,
+	  src/seltrans.cpp, src/nodepath.cpp:
+	  made all SPSelection members private, and changed all methods into
+	  real C++ methods (with temporary inline wrappers for the old C
+	  pseudo-methods)
+
 2004-04-18  Carl Hetherington <inkscape@carlh.net>
 
 	* src/print.cpp, src/print.h, src/sp-text.cpp
