--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-19  Carl Hetherington <inkscape@carlh.net>
+
+	* src/livarot/ShapeRaster.cpp
+	Fix an unitialised value error that was spotted by valgrind.
+
 2004-04-18  MenTaLguY <mental@rydia.net>
 
 	* src/selection.cpp, src/selection.h, src/selection-chemistry.cpp,
