Fix some compiler warnings.
(bzr r2370)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-19  Carl Hetherington <inkscape@carlh.net>
+
+	* src/dialogs/stroke-style.cpp, libnr/nr-rect-l.cpp:
+	Fix a couple of compiler warnings.
+
 2004-04-19  bulia byak <bulia@users.sourceforge.net>
 
         * shortcuts.cpp selection-chemistry.cpp selection-chemistry.h verbs.cpp verbs.h
